--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Tech Blog
+title: Explore Tech
 SEOTitle: jorian的博客 | Tech Blog
 header-img: img/post-bg-desk.jpg
-email: jorianchu@gmail.com
-description: " Forever shivering, forever embracing"
-keyword: "BY, BY Blog, jorian的博客, jorianchu, Python, NLP, Open Source"
+email: jorian.chu@gmail.com
+description: "Forever shivering, forever embracing"
+keyword: "Tech, Tech Blog, jorian的博客, jorianchu, Python, NLP, Open Source"
 url: "https://jorianchu.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/jorianchu/jorianchu.github.io.git" # you code repository
@@ -12,17 +12,17 @@ github_repo: "https://github.com/jorianchu/jorianchu.github.io.git" # you code r
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-jc-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     jorianchu
-zhihu_username:     Jorian
+weibo_username:     jorianchu
+zhihu_username:     jorianchu
 github_username:    JorianChu
-facebook_username:  
-jianshu_username:   e71990ada2fd
+#facebook_username:  
+#jianshu_username:   e71990ada2fd
 #twitter_username:   jorianchu
 
 
@@ -57,13 +57,13 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: jorianchu
+disqus_username: jorianchu
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: bb43e65368e6a61aa197                            #生成的clientID
+  clientSecret: dcc2f16188d9ee6b0f8eb696540ec031ba93892e    #生成的clientSecret
   repo: jorianchu.github.io    #仓库名称
   owner: jorianchu    #github用户名
   admin: jorianchu
@@ -74,10 +74,10 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+ba_track_id: f3b2ba4f6faab7a0079b8099578f192e
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+ga_track_id: 'UA-139974211-1'            # Format: UA-xxxxxx-xx
 ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
@@ -99,8 +99,8 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "jekyll doc",
+        href: "https://www.jekyll.com.cn/"
     },{
         title: "简书·BY",
         href: "http://www.jianshu.com/u/e71990ada2fd"
@@ -108,7 +108,7 @@ friends: [
         title: "Apple",
         href: "https://apple.com"
     },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "Django Document",
+        href: "https://docs.djangoproject.com/"
     }
 ]
