--- a/_config.yml
+++ b/_config.yml
@@ -97,20 +97,18 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "jekyll doc",
-        href: "https://www.jekyll.com.cn/"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Django Document",
-        href: "https://docs.djangoproject.com/"
-    }
-]
-
-theme: jekyll-theme-cayman
+# friends: [
+#     {
+#         title: "jekyll doc",
+#         href: "https://www.jekyll.com.cn/"
+#     },{
+#         title: "简书·BY",
+#         href: "http://www.jianshu.com/u/e71990ada2fd"
+#     },{
+#         title: "Apple",
+#         href: "https://apple.com"
+#     },{
+#         title: "Django Document",
+#         href: "https://docs.djangoproject.com/"
+#     }
+# ]
